--- a/index.html
+++ b/index.html
@@ -28,8 +28,4 @@
   <a href="C:\Users\User\Pictures\saved buko"></a>
     <img bgcolor ="C:\Users\User\Pictures\saved buko" alt="">
     <p><h2>Freeedoom is real in all instances!!!</h2></p>
-    <p><h2>park in the car and let move the distance to a creative though and outmost resource</h2></p>
-    <p><h2>Gift</h2></p>
-
-</body>
-</html>	
+    <p><h2>park in the car and let move the distance to a creative though 	
